parser/tests/bad/stmt07.st
% references in 'get' statement cannot be constant

const i := 0
get i
